[project]
name = "blsy-dagster-server"
version = "1.12.21.0"
description = "BLSY Dagster Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # server
    "dagster==1.12.21",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-duckdb",
    "dagster-pandas"
]
[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]